--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,24 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         p5-WWW-iTunesConnect
-version:      1.008
-version_from: lib/WWW/iTunesConnect.pm
-installdirs:  site
+--- #YAML:1.0
+name:               p5-WWW-iTunesConnect
+version:            1.012
+abstract:           ~
+author:
+    - Brandon Fosdick <bfoz@bfoz.net>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    HTML::Form:                    0
-    IO::Uncompress::Gunzip:        0
-    LWP:                           0
-    Net::SSLeay:                   0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    HTML::Form:           0
+    HTML::Tree:           0
+    IO::Uncompress::Gunzip:  0
+    LWP:                  0
+    Net::SSLeay:          0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
